--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,9 @@ updates:
     time: '00:00'
   open-pull-requests-limit: 10
   reviewers:
-    - fundacyjni
+    - wuzado
   assignees:
-    - fundacyjni
+    - wuzado
   commit-message:
     prefix: fix
     prefix-development: chore
